--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </style>
 
 <article>
-    <img src=gifmas_1576402750601.gif width=840 height=840> </img>
+    <img src="./gifmas_1576402750601.gif" width=840 height=840> </img>
     <h1>We'll be back soon!</h1>
     <div>
         <p>Sorry for the inconvenience but site is under construction.</p>
