initial site upload

--- a/404/index.html
+++ b/404/index.html
@@ -7,7 +7,7 @@
     <title>C.Y.B.E.R.S.A.F.E</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="information security, vulnerability management, IT outsourcing, penetration test, red team, information security, incident response, cybersecurity, securtiy assement, gdpr compliance, security awareness, security training, difital forensics, information security audit,">
-    <link rel="canonical" href="http://localhost:4000//">
+    <link rel="canonical" href="http://localhost:4000//404/">
 
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: https://bootswatch.com/flatly/ -->
