--- a/about/index.html
+++ b/about/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>C.Y.B.E.R.S.A.F.E</title>
+    <title>About</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="information security, vulnerability management, IT outsourcing, penetration test, red team, information security, incident response, cybersecurity, securtiy assement, gdpr compliance, security awareness, security training, difital forensics, information security audit,">
-    <link rel="canonical" href="http://localhost:4000//">
+    <link rel="canonical" href="http://localhost:4000//about/">
 
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: https://bootswatch.com/flatly/ -->
