--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Page Title</title>
+<title>CYBERSAFE</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
